# JewkieBot

./: .env  .gitignore  Chess-Engine-Opening-Plan.txt  fetch_engines.sh
.claude/: settings.local.json
.github/workflows/: release.yml
backend/: .env.example  .gitignore  drizzle.config.js  fix_tests.js  generated_games.pgn  package.json
backend/db/: db.js  schema.js
backend/db/migrations/: 0001_gray_roxanne_simpson.sql
backend/db/migrations/meta/: 0001_snapshot.json  _journal.json
backend/scripts/: migrate_move_evals.js
backend/src/: apiTransport.js  chessComClient.js  cutechessManager.js  dbClient.js  discordBot.js  engineManager.js  gameAnalyzer.js  lichessBot.js  notifier.js  openings.js  pgnGenerator.js  pgnManager.js  server.js
backend/src/scripts/: analyzeChessComGames.js  build.js  buildEngine.js  downloadBook.js  downloadCerebellum.js  downloadEngines.js  generate_dataset.ts  ingestPgn.js  migrate.js  migrate_move_evals.js  runTourney.js  selfPlay.js  teacherAnalysis.js  verify_remote_install.js
backend/tests/: apiTransport.test.js  discordBot.test.js  engineManager.test.js  gameAnalyzer.test.js  lichess.test.js  lichessRateLimitCache.test.js  notifier.test.js  openings.test.js  pgnGenerator.test.js  pgnManager.test.js  server.test.js  sshEngine.test.js
deploy/systemd/: chess-engine-dev.service  chess-engine-prod.service  dev.env.example  prod.env.example
engines/jewkiebot/: .gitignore  CMakeLists.txt  jewkiebot.txt
engines/jewkiebot/include/: bench.h  board.h  book.h  evaluator.h  main.h  move.h  polyglotRandom.h  search.h  timeManager.h  transpositionTable.h  types.h
engines/jewkiebot/scripts/: build.sh  checkout-build.sh  checkout-latest.sh  ci.sh  list-versions.sh  tag-release.sh  test.sh
engines/jewkiebot/src/: bench.cpp  board.cpp  book.cpp  engine.cpp  evaluator.cpp  main.cpp  move.cpp  search.cpp  timeManager.cpp  transpositionTable.cpp
engines/jewkiebot/tests/: board_move_tests.cpp  book_test.cpp  eval_test.cpp  search_test.cpp  time_manager_test.cpp  transposition_table_test.cpp
engines/jewkiebot/tests/Performance/: board_move_performance.cpp  eval_performance.cpp  search_performance.cpp
frontend/src/: App.jsx  Main.jsx
frontend/src/context/: BotContext.jsx
frontend/src/layouts/: Default.jsx
frontend/src/pages/: AnalysisPage.jsx  BenchmarkControl.jsx  Game.jsx  Home.jsx  LichessPage.jsx
frontend/src/services/: api.js
